# CoqQ

./: README.md  coq-mathcomp-quantum.opam
.github/workflows/: ci.yml
src/: autonat.v  convex.v  cpo.v  ctopology.v  dune  extnum.v  factoring.v  hermitian.v  hspace.v  hspace_extra.v  inhabited.v  majorization.v  mcaextra.v  mcextra.v  mxnorm.v  mxpred.v  notation.v  orthomodular.v  prodvect.v  qmem.v  qreg.v  qtype.v  quantum.v  summable.v  svd.v  tensor.v  xvector.v
src/QIT/: commutator.v  series.v
src/dirac/: dirac.v  hstensor.v  setdec.v
src/example/coqq_paper/: example.v  qhl.v  qwhile.v
src/example/diracdec/: dirac_notation.v
src/example/qlaws/: basic_def.v  circuit.v  example.v  nondeterministic.v  qwhile.v  recursive.v
src/example/refinement/: language.v  refine.v
