opam-version: "2.0"
name: "coq-mathcomp-quantum"
maintainer: "coq-mathcomp-quantum@anonymous"
license: "CeCILL-B"
authors: ["Coq Quantum Dev. Team"]
build: [ "dune" "build" "-p" name "-j" jobs ]
depends: [
  "coq-core"                 {>= "9.1.1" & < "9.2~"}
  "rocq-core"                {>= "9.1.1" & < "9.2~"}
  "rocq-elpi"                {>= "3.3.1" & < "3.4~"}
  "dune"                     {>= "3.8"}
  "rocq-hierarchy-builder"   {>= "1.10.2" & < "1.11~"}
  "rocq-mathcomp-ssreflect"  { = "2.5.0"            }
  "rocq-mathcomp-algebra"    { = "2.5.0"            }
  "rocq-mathcomp-fingroup"   { = "2.5.0"            }
  "rocq-mathcomp-analysis"   { = "1.16.0"           }
  "rocq-mathcomp-classical"  { = "1.16.0"           }
  "coq-mathcomp-real-closed"
  "rocq-mathcomp-finmap"     { = "2.2.2"            }
]
synopsis: "Quantum et al"
